Fix white space on small devices

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -515,11 +515,8 @@ nav {
 
     .filter-bar {
         gap: 300px;
-     }
-
-    .section {
-        padding: 10px;
     }
+    
     .item{
         gap: 0;
     
